# LewLM

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cuda  LICENSE  MANIFEST.in  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: ai-environment-maintainer.agent.md  repo-cartographer.agent.md  test-triage.agent.md
.github/hooks/: ai-safety-guard.json  customization-health.json  repo-session-context.json
.github/instructions/: python-lewlm.instructions.md
.github/workflows/: ci.yml
docs/: index.md  security.md
docs/architecture/: overview.md  runtime-routing-and-serving.md  storage-and-state.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: app-readiness.md  benchmarking-and-autotune.md  chat-and-responses.md  cluster.md  configuration.md  documents.md  host-app-integration.md  models-and-routing.md  prompting-and-mcp-tools.md  sessions-and-events.md  tools-and-skills.md
docs/operations/: docker.md  troubleshooting.md
docs/reference/: cli.md  configuration.md  document-formats-and-skills.md  http-api.md  integration-bundle.md  python-api.md  release-and-validation.md  runtime-capability-matrix.md  scope-matrix.md
examples/: app_starter_proofs.py  branded-document-template.json  contract-transform.json  document-compare-transform.json  document.json  file-template-transform.json  file-template.json  frontier_acceptance_workflow.sh  http_api_integration.py  integration-bundle.json  local-mcp-tools.json  long-document-memo.json  meeting-transcript-notes.json  ocr-assisted-extraction.json  python_api_workflow.py  python_app_client.py  receipt-transform.json  speech-transcript-cleanup.json  system-prompt.txt  tool-execute-transform.json
scripts/: capture_host_validation.py  capture_release_bundle.py  frontier_acceptance.py  generate_dependency_audit.py  generate_release_manifest.py  generate_sbom.py  performance_core_acceptance.py  standards_refresh_acceptance.py  validate_release_candidate.py
src/lewlm/: __init__.py  __main__.py  _version.py  app_helpers.py  install_profiles.py  library.py  pack_registry.py  scope_matrix.py  serving_profiles.py  structured_output.py
tests/: conftest.py
tests/e2e/: test_chat_workflow.py  test_gemma_real_model_benchmark.py  test_model_registry_workflow.py
tests/integration/: test_api.py  test_benchmark_diagnostics.py  test_cluster.py  (+7 more)
(+201 files in other folders)
