[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lewlm"
version = "0.4.1a0"
description = "Local-first middleware backend for multimodal local AI runtimes, serving, and document workflows."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "cryptography>=45.0.0,<46.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]
mlx = [
  "mlx>=0.21.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-lm>=0.20.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-vlm>=0.1.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "mlx-audio>=0.1.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
llamacpp = [
  "llama-cpp-python>=0.3.0,<1.0.0",
  "cmake>=3.30.0,<4.0.0; platform_system == 'Windows'",
  "ninja>=1.11.1,<2.0.0; platform_system == 'Windows'",
]
documents = [
  "openpyxl>=3.1.0,<4.0.0",
  "Pillow>=11.0.0,<12.0.0",
  "pytesseract>=0.3.10,<1.0.0",
  "pypdf>=5.0.0,<6.0.0",
  "python-docx>=1.1.0,<2.0.0",
  "reportlab>=4.4.0,<5.0.0",
  "WeasyPrint>=63.0,<64.0.0",
]

[project.scripts]
lewlm = "lewlm.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["lewlm.models", "lewlm.models.*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.py[cod]", "__pycache__/*", ".DS_Store"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "long_running: opt-in long-running real-model benchmark coverage",
]
filterwarnings = [
  "ignore:'asyncio.get_event_loop_policy' is deprecated and slated for removal in Python 3.16:DeprecationWarning:pytest_asyncio.plugin",
  "ignore:'asyncio.set_event_loop_policy' is deprecated and slated for removal in Python 3.16:DeprecationWarning:pytest_asyncio.plugin",
]
